Errors fixed & cleanup